--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Quantum Edu AI",
   "short_name": "QuantumEdu",
-  "start_url": "/edu-ai-pro/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#111827",
@@ -13,7 +13,7 @@
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icon-192.png",
       "sizes": "512x512",
       "type": "image/png"
     }
